--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -26,34 +26,32 @@ jobs:
     needs: build
     steps:
       - uses: actions/checkout@v1
-      - name: Login to dockerhub
-        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u torbencarstens --password-stdin
-      - name: Get the version
-        id: vars
-        run: echo ::set-output name=tag::$(echo ${GITHUB_SHA})
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+            registry: ghcr.io
+            username: ${{ github.repository_owner }}
+            password: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/download-artifact@v1
         with:
           name: bundlejs
       - name: Move artifact into public
         run: mv bundlejs/bundle.js public/bundle.js
       - name: Build the tagged Docker image
-        run: docker build -t torbencarstens/neverhaveiever:${{steps.vars.outputs.tag}} .
+        run: docker build -t ghcr.io/woog-life/preliminary-frontend:${GITHUB_SHA} .
       - name: Push the tagged Docker image
-        run: docker push torbencarstens/neverhaveiever:${{steps.vars.outputs.tag}}
+        run: docker push ghcr.io/woog-life/preliminary-frontend:${GITHUB_SHA}
   deploy:
     name: "Publish to k8s"
     runs-on: ubuntu-latest
     needs: build_push_docker
     steps:
       - uses: actions/checkout@v1
-      - name: Get the version
-        id: vars
-        run: echo ::set-output name=tag::$(echo ${GITHUB_SHA})
       - name: update tag in manifest.yml
-        run: sed -i -e "s#{{TAG}}#:$(echo ${{steps.vars.outputs.tag}})#g" .kubernetes/manifest.yaml
+        run: sed -i -e "s#{{TAG}}#$(echo ${GITHUB_SHA})#g" .kubernetes/manifest.yaml
       - uses: danielr1996/kubectl-action@1.0.0
         name: apply config
         with:
-          kubeconfig: ${{ secrets.K8SCONF }}
+          kubeconfig: ${{ secrets.KUBECONFIG }}
           args: apply -f .kubernetes/manifest.yaml
 
