--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -17,10 +17,10 @@ jobs:
       - run: sed -i -e "s#{{TAG}}#$(echo ${GITHUB_SHA})#g" src/App.fs
       - run: npm install
       - run: npm run prod
-      - uses: actions/upload-artifact@v1
+      - uses: actions/upload-artifact@v2
         with:
-          name: bundlejs
-          path: public/bundle.js
+          name: publicdir
+          path: public/
   build_push_docker:
     runs-on: ubuntu-latest
     needs: build
@@ -34,9 +34,9 @@ jobs:
             password: ${{ secrets.GITHUB_TOKEN }}
       - uses: actions/download-artifact@v1
         with:
-          name: bundlejs
-      - name: Move artifact into public
-        run: mv bundlejs/bundle.js public/bundle.js
+          name: publicdir
+      - name: Move artifacts into current dir
+        run: mv publicdir/public .
       - name: Build the tagged Docker image
         run: docker build -t ghcr.io/woog-life/preliminary-frontend:${GITHUB_SHA} .
       - name: Push the tagged Docker image
