--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -35,26 +35,24 @@ jobs:
       - uses: actions/download-artifact@v1
         with:
           name: publicdir
-      - run: ls -R
-      - name: Move artifacts into current dir
-        run: mv publicdir/public .
-      - run: ls public
-      - run: ls publicdir
-#      - name: Build the tagged Docker image
-#        run: docker build -t ghcr.io/woog-life/preliminary-frontend:${GITHUB_SHA} .
-#      - name: Push the tagged Docker image
-#        run: docker push ghcr.io/woog-life/preliminary-frontend:${GITHUB_SHA}
-#  deploy:
-#    name: "Publish to k8s"
-#    runs-on: ubuntu-latest
-#    needs: build_push_docker
-#    steps:
-#      - uses: actions/checkout@v1
-#      - name: update tag in manifest.yml
-#        run: sed -i -e "s#{{TAG}}#$(echo ${GITHUB_SHA})#g" .kubernetes/manifest.yaml
-#      - uses: danielr1996/kubectl-action@1.0.0
-#        name: apply config
-#        with:
-#          kubeconfig: ${{ secrets.KUBECONFIG }}
-#          args: apply -f .kubernetes/manifest.yaml
+      - run: |
+            rm -rf public
+            mv publicdir public
+      - name: Build the tagged Docker image
+        run: docker build -t ghcr.io/woog-life/preliminary-frontend:${GITHUB_SHA} .
+      - name: Push the tagged Docker image
+        run: docker push ghcr.io/woog-life/preliminary-frontend:${GITHUB_SHA}
+  deploy:
+    name: "Publish to k8s"
+    runs-on: ubuntu-latest
+    needs: build_push_docker
+    steps:
+      - uses: actions/checkout@v1
+      - name: update tag in manifest.yml
+        run: sed -i -e "s#{{TAG}}#$(echo ${GITHUB_SHA})#g" .kubernetes/manifest.yaml
+      - uses: danielr1996/kubectl-action@1.0.0
+        name: apply config
+        with:
+          kubeconfig: ${{ secrets.KUBECONFIG }}
+          args: apply -f .kubernetes/manifest.yaml
 
