--- a/src/App.fsproj
+++ b/src/App.fsproj
@@ -4,6 +4,7 @@
   </PropertyGroup>
   <ItemGroup>
       <Compile Include="Lake.fs" />
+      <Compile Include="Weather.fs" />
       <Compile Include="App.fs" />
   </ItemGroup>
   <ItemGroup>
