--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -16,6 +16,7 @@ jobs:
           dotnet-version: "3.1.x"
       - run: sed -i -e "s#{{TAG}}#$(echo ${GITHUB_SHA})#g" src/App.fs
       - run: sed -i -e "s#{{API_KEY}}#${{ secrets.OPENWEATHERMAP_APIKEY_RAW }}#g" src/App.fs
+      - run: sed -i -e "s#|> Program.withConsoleTrace##g" src/App.fs
       - run: npm install
       - run: npm run prod
       - uses: actions/upload-artifact@v2
