--- a/src/App.fsproj
+++ b/src/App.fsproj
@@ -3,6 +3,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+      <Compile Include="Booking.fs" />
       <Compile Include="Lake.fs" />
       <Compile Include="Weather.fs" />
       <Compile Include="App.fs" />
