--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
           name: public
           path: public/
 
-  build_push_docker:
+  build_docker:
     runs-on: ubuntu-latest
     needs: [build, lint]
     steps:
