--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,10 @@
 name: Build and deploy
 
-on: pull_request
+on:
+  pull_request:
+  push:
+    branches:
+      - '!master'
 
 jobs:
   lint:
@@ -35,19 +39,17 @@ jobs:
           name: public
           path: public/
 
-  build_docker:
+  tests:
     runs-on: ubuntu-latest
-    needs: [build, lint]
+    needs: build_docker
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/download-artifact@v1
+      - run: docker build -t ghcr.io/woog-life/preliminary-frontend:${GITHUB_SHA} .
+      - name: Cypress tests
+        uses: cypress-io/github-action@v2
         with:
-          name: public
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v1
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build the tagged Docker image
-        run: docker build -t ghcr.io/woog-life/preliminary-frontend:${GITHUB_SHA} .
+          start: docker run --rm -p 8080:80 ghcr.io/woog-life/preliminary-frontend:${GITHUB_SHA}
+          wait-on: 'http://localhost:8080'
+          record: true
+        env:
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
