--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "css-loader": "3.5.3",
+    "cypress": "^9.3.1",
     "file-loader": "6.2.0",
     "html-webpack-plugin": "4.3.0",
     "mini-css-extract-plugin": "0.9.0",
