Load last shown lake from cookie
Closes #16

--- a/src/App.fsproj
+++ b/src/App.fsproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Fable.Elmish.React" Version="3.0.1" />
       <PackageReference Include="Thoth.Fetch" Version="2.0.0" />
       <PackageReference Include="Fable.Browser.Navigator" Version="1.0.0" />
+      <PackageReference Include="Fable.Import.Js-Cookie" Version="1.0.0" />
       <PackageReference Include="Thoth.Json" Version="4.1.0" />
   </ItemGroup>
 </Project>
