--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@babel/core": "7.8.7",
     "fable-compiler": "2.4.18",
     "fable-loader": "2.1.8",
+    "js-cookie": "3.0.1",
     "react": "16.13.0",
     "react-dom": "16.13.0",
     "webpack": "4.43.0",
