--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -21,31 +21,11 @@ jobs:
           exec: helm lint --strict
           kubeconfig: ${{ secrets.KUBECONFIG_RAW }}
 
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: "3.1.x"
-      - run: sed -i -e "s#{{TAG}}#$(echo ${GITHUB_SHA})#g" src/App.fs
-      - run: sed -i -e "s/|> Program.withConsoleTrace//g" src/App.fs
-      - run: sed -i -e "s#{{API_KEY}}#${{ secrets.OPENWEATHERMAP_APIKEY_RAW }}#g" src/App.fs
-      - run: npm install
-      - run: npm run prod
-      - uses: actions/upload-artifact@v1
-        with:
-          name: public
-          path: public/
-
   build_push_docker:
     runs-on: ubuntu-latest
-    needs: [build, lint]
+    needs: lint
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/download-artifact@v1
-        with:
-          name: public
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
