--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -6,8 +6,14 @@ on:
       - master
 
 jobs:
+  config_check:
+    runs-on: ubuntu-latest
+    steps:
+      - run: [[ -z ${{ secrets.OPENWEATHERMAP_APIKEY_RAW }} ]] && exit 1
+
   lint:
     runs-on: ubuntu-latest
+    needs: config_check
     steps:
       - uses: actions/checkout@v3
       - name: update tag in manifest.yml
@@ -23,6 +29,7 @@ jobs:
 
   build_push_docker:
     runs-on: ubuntu-latest
+    needs: config_check
     steps:
       - uses: actions/checkout@v3
       - name: Login to GitHub Container Registry
