--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,14 +13,12 @@ jobs:
       - uses: actions/checkout@v3
       - name: update tag in manifest.yml
         run: sed -i -e "s#__TAG__#${GITHUB_SHA}#g" values.yaml
-      - uses: WyriHaximus/github-action-helm3@v3
+      - uses: OpenAlcoholics/github-action-helm@v0.1.5
         with:
-          exec: helm lint
-          kubeconfig: ${{ secrets.KUBECONFIG_RAW }}
-      - uses: WyriHaximus/github-action-helm3@v3
+          raw_command: lint
+      - uses: OpenAlcoholics/github-action-helm@v0.1.5
         with:
-          exec: helm lint --strict
-          kubeconfig: ${{ secrets.KUBECONFIG_RAW }}
+          raw_command: lint --strict
 
   build_docker:
     runs-on: ubuntu-latest
