--- a/.github/workflows/build_publish.yml
+++ b/.github/workflows/build_publish.yml
@@ -12,14 +12,12 @@ jobs:
       - uses: actions/checkout@v3
       - name: update tag in manifest.yml
         run: sed -i -e "s#__TAG__#${GITHUB_SHA}#g" values.yaml
-      - uses: WyriHaximus/github-action-helm3@v3
+      - uses: OpenAlcoholics/github-action-helm@v0.1.5
         with:
-          exec: helm lint
-          kubeconfig: ${{ secrets.KUBECONFIG_RAW }}
-      - uses: WyriHaximus/github-action-helm3@v3
+          raw_command: lint
+      - uses: OpenAlcoholics/github-action-helm@v0.1.5
         with:
-          exec: helm lint --strict
-          kubeconfig: ${{ secrets.KUBECONFIG_RAW }}
+          raw_command: lint --strict
 
   build_push_docker:
     runs-on: ubuntu-latest
@@ -43,7 +41,13 @@ jobs:
       - uses: actions/checkout@v3
       - run: sed -i -e "s#__TAG__#${GITHUB_SHA}#g" values.yaml
       - run: sed -i -e "s#__OPEN_WEATHER_MAP_KEY__#${{ secrets.OPENWEATHERMAP_APIKEY_RAW }}#g" values.yaml
-      - uses: WyriHaximus/github-action-helm3@v3
+      - name: install helm chart
+        uses: OpenAlcoholics/github-action-helm@v0.1.5
         with:
-          exec: helm upgrade preliminary-frontend . --install --namespace=wooglife --atomic
+          subcommand: upgrade
+          release_name: preliminary-frontend
+          ref: .
+          namespace: wooglife
+          install: true
+          atomic: true
           kubeconfig: ${{ secrets.KUBECONFIG_RAW }}
