Actually mount configmap..

--- a/templates/deployment.yml
+++ b/templates/deployment.yml
@@ -30,6 +30,8 @@ spec:
         envFrom:
           - secretRef:
               name: {{ .Values.secret.name }}
+          - configMapRef:
+              name: {{ .Values.configmap.name }}
         resources:
           requests:
             cpu: {{ .Values.deployment.requests.cpu }}
